### 3.0.0
## 2020-09-22
### Breaking changes
* drop support for puppet < 6
### Features
* Add support puppet version > 6.

### 2.5.7
## 2022-05-03
* Fix XSS bug T346216

### 2.5.6
## 2022-05-03
* Checkout test patch to a patch to clean up output (gerrit:914754)
* tox: use default python for local testing (gerrit:914747)
* tox: do not skip missing interpreters on CI (gerrit:914746)

### 2.5.4
## 2022-12-19
* Fix: Correct fulldiff

### 2.5.3
## 2022-12-09
* Fix: handle a blank CHANGE_PRIVATE gracefully

### 2.5.2
## 2022-11-18
* Fix: Skip new files when processing auto selector - T323282
* Fix: add additional return code descriptions

### 2.5.1
## 2022-11-15
* Fix: Exclude Class from core type

## 2022-11-15
### 2.5.0
* Add option to run against one production and one cloud host - T289666
* Add gerrit change id to output dir
* Add ability to filter for core resources
* Add support for concat_fragment content
* Add support for specifying different private repo change if - T265633
* Store pson catalogs as gziped files
* Fix issue resulting in hosts getting shifted to the wrong list - T224977
* Fix issue when only one result is returned

## 2022-11-7
### 2.4.2
* For auto selector only analyse manifest fils

## 2022-11-1
### 2.4.1
* Fix title parsing

## 2022-10-31
### 2.4.0
* Pin setuptools
* Drop old hiera file locations
* Add new selector for resources with R:
* Add new auto discover feature
* minor change to how we track errors

## 2022-09-12
### 2.3.4
* Add fix for new hiera file location and change in realm name

## 2022-07-26
### 2.3.3
* improve debug_host output

## 2022-07-11
### 2.3.2
* Add support for XDG base configuration (XDG_CONFIG_HOME)
* Add storeconfig options when compiling for production

## 2022-05-23
### 2.3.1
* update populate_puppet.setup_environment to ensure repos are refreshed

## 2022-02-14
### 2.3.0
* Allow multiple different host selectors to be used
** https://gerrit.wikimedia.org/r/c/operations/software/puppet-compiler/+/771483
